offline version working

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,15 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <header>
+      <button>Login to save to cloud</button>
+    </header>
     <div id="root"></div>
+    <footer class="info">
+      <p>Double-click to edit a todo</p>
+      <p>Created by <a href="http://github.com/feelextra/">Felix Vess</a></p>
+      <p>Fork me at <a href="https://github.com/feelextra/todo-app">Todo-App</a></p>  
+    </footer>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
