--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Todo App</title>
   </head>
-  <body>
+  <body class="body">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
